# cont_ql

./: .gitignore  LICENSE  README.md  job.sh  pyproject.toml  setup.sh
scripts/notebooks/: notebook.ipynb
src/: __main__.py  environment.py  model.py  nn.py
src/cql/: environment.py
src/cql/nn/: buffer.py  model.py  networks.py  training.py
src/cql/nn/pol/: loss.py  policy.py
src/cql/plotting/: plotting.py
